@@ -7,6 +7,7 @@ version x.x.x
       YouTube videos
     Some example text that should work: public, private, draft, unlisted, link only. --draft will still be honored for Blogger.
   * --date takes way, way more that just YYYY-MM-DD format. See the README and example scripts for a detailed list.
+  * --photo will act like a "--title for photos" for Picasa, allowing you to list, get, delete, or tag only certain photos.
 
 version 0.9.11
   * --force-auth and --skip-auth will let you specify if GoogleCL should verify the oauth access token it has on file for the service being used. After the first valid access token retrieved, --skip-auth is set in your config file as True. You can set this value to False to force a validation step on every run. The validation step is an authenticated request to Google to retrieve a small amount of data -- removing this step can yield a significant decrease in execution time for slow connections.
