@@ -1,10 +1,10 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.37.1.
-.TH GOOGLE "1" "October 2010" "google 0.9.11" "User Commands"
+.TH GOOGLE "1" "November 2010" "google 0.9.11" "User Commands"
 .SH NAME
 google \- command-line access to (some) Google services
 .SH SYNOPSIS
 .B google
-[\fIpicasa|blogger|youtube|docs|contacts|calendar\fR] \fITASK \fR[\fIoptions\fR]
+[\fIpicasa|blogger|youtube|docs|contacts|calendar|finance\fR] \fITASK \fR[\fIoptions\fR]
 .SH DESCRIPTION
 This program provides command\-line access to
 (some) google services via their gdata APIs.
@@ -33,7 +33,7 @@ Available tasks for service picasa: 'get', 'create', 'list', 'list\-albums', 'ta
 .IP
 get: Download albums
 .IP
-Requires: title AND dest Optional: owner, format
+Requires: title AND dest Optional: owner, format, photo
 .IP
 create: Create an album
 .IP
@@ -41,7 +41,7 @@ Requires: title Optional: src, date, summary, tags, access
 .IP
 list: List photos
 .IP
-Requires: fields AND delimiter Optional: title, query, owner
+Requires: fields AND delimiter Optional: title, query, owner, photo
 .IP
 list\-albums: List albums
 .IP
@@ -49,7 +49,7 @@ Requires: fields AND delimiter Optional: title, owner
 .IP
 tag: Tag photos
 .IP
-Requires: (title OR query) AND tags Optional: owner
+Requires: (title OR query) AND tags Optional: owner, photo
 .IP
 post: Post photos to an album
 .IP
@@ -57,7 +57,7 @@ Requires: title AND src Optional: tags, owner
 .IP
 delete: Delete photos or albums
 .IP
-Requires: (title OR query)
+Requires: (title OR query) Optional: photo
 .PP
 Available tasks for service blogger: 'post', 'tag', 'list', 'delete'
 .IP
@@ -160,6 +160,44 @@ Requires: fields AND delimiter Optional: title, query, cal
 delete: Delete event from a calendar
 .IP
 Requires: (title OR query) Optional: date, cal
+.PP
+Available tasks for service finance: 'list\-txn', 'delete\-pos', 'create\-pos', 'delete\-txn', 'create', 'create\-txn', 'list', 'list\-pos', 'delete'
+.IP
+list\-txn: List transactions
+.IP
+Requires: title AND ticker
+.IP
+delete\-pos: Delete positions
+.IP
+Requires: title Optional: ticker
+.IP
+create\-pos: Create position
+.IP
+Requires: title AND ticker
+.IP
+delete\-txn: Delete transactions
+.IP
+Requires: title AND ticker Optional: txnid
+.IP
+create: Create a portfolio
+.IP
+Requires: title AND currency
+.IP
+create\-txn: Create transaction
+.IP
+Requires: title AND ticker AND ttype Optional: shares, price, date, commission, currency, notes
+.IP
+list: List portfolios
+.IP
+Requires: none Optional: fields
+.IP
+list\-pos: List positions
+.IP
+Requires: title
+.IP
+delete: Delete portfolios
+.IP
+Requires: title
 .SH OPTIONS
 .TP
 \fB\-\-version\fR
@@ -181,8 +219,14 @@ primary.
 \fB\-c\fR CATEGORY, \fB\-\-category\fR=\fICATEGORY\fR
 YouTube only \- specify video categories as a commaseparated list, e.g. "Film, Travel"
 .TP
+\fB\-\-commission\fR=\fICOMMISSION\fR
+Finance only \- specify commission for transaction
+.TP
 \fB\-\-config\fR=\fICONFIG\fR
 Specify location of config file.
+.TP
+\fB\-\-currency\fR=\fICURRENCY\fR
+Finance only \- specify currency for portfolio
 .TP
 \fB\-\-devtags\fR=\fIDEVTAGS\fR
 YouTube only \- specify developer tags as a commaseparated list.
@@ -191,9 +235,10 @@ YouTube only \- specify developer tags as a commaseparated list.
 YouTube only \- specify a developer key
 .TP
 \fB\-d\fR DATE, \fB\-\-date\fR=\fIDATE\fR
-Calendar only \- date of the event to add / look for.
-Can also specify a range with a comma. Picasa only \-
-sets the date of the album
+Calendar only \- date of the event to add/look for. Can
+also specify a range with a comma. Picasa only \- sets
+the date of the album Finance only \- transaction
+creation date
 .TP
 \fB\-\-debug\fR
 Enable all debugging output, including HTTP data
@@ -236,10 +281,19 @@ Title of the item
 Google Apps Premier only \- do not convert the file on
 upload. (Else converts to native Google Docs format)
 .TP
+\fB\-\-notes\fR=\fINOTES\fR
+Finance only \- specify notes for transaction
+.TP
 \fB\-o\fR OWNER, \fB\-\-owner\fR=\fIOWNER\fR
 Username or ID of the owner of the resource. For
 example, 'picasa list\-albums \fB\-o\fR bob' to list bob's
 albums
+.TP
+\fB\-\-photo\fR=\fIPHOTO\fR
+Picasa only \- specify title or name of photo(s)
+.TP
+\fB\-\-price\fR=\fIPRICE\fR
+Finance only \- specify price for transaction
 .TP
 \fB\-q\fR QUERY, \fB\-\-query\fR=\fIQUERY\fR
 Full text query string for specifying items. Searches
@@ -251,6 +305,10 @@ Print only prompts and error messages
 \fB\-\-reminder\fR=\fIREMINDER\fR
 Calendar only \- specify time for added event's
 reminder, e.g. "10m", "3h", "1d"
+.TP
+\fB\-\-shares\fR=\fISHARES\fR
+Finance only \- specify amount of shares for
+transaction
 .TP
 \fB\-\-skip\-auth\fR
 Skip validation step for re\-used access tokens.
@@ -264,6 +322,16 @@ description.
 .TP
 \fB\-t\fR TAGS, \fB\-\-tags\fR=\fITAGS\fR
 Tags for item, e.g. "Sunsets, Earth Day"
+.TP
+\fB\-\-ticker\fR=\fITICKER\fR
+Finance only \- specify ticker
+.TP
+\fB\-\-ttype\fR=\fITTYPE\fR
+Finance only \- specify transaction type, e.g. "Bye",
+"Sell", "Buy to Cover", "Sell Short"
+.TP
+\fB\-\-txnid\fR=\fITXNID\fR
+Finance only \- specify transaction id
 .TP
 \fB\-u\fR USER, \fB\-\-user\fR=\fIUSER\fR
 Username to log in with for the service.
